# tcg_interpreter

./: .gitignore  Cargo.toml
src/: game_engine.rs  main.rs
src/game_engine/: action.rs  basic_data_structure.rs  card.rs  effect.rs  event.rs  gamefield.rs  rules.rs  target.rs  turn.rs  zone.rs
tests/: integration_test.rs  normal_summon.rs
