[package]
name = "tcg_interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    serde_derive = "*"
    serde = { version = "*", features = ["derive"] }
    serde_json = "*"
    strum = "*"
    strum_macros = "*"
    rand = "*"
    
    
[lib]
    name = "tcg_interpreter"           
    path = "src/lib.rs"
